feat: update fav icon and meta tags

--- a/techblog_app/templates/techblog_app/base.html
+++ b/techblog_app/templates/techblog_app/base.html
@@ -7,7 +7,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description"
-            content="The blog for discussing everything to do with code, programing, and development.">
+            content="The blog for discussing everything to do with Webdev, code, programing, and development.">
+        <meta name="keywords"
+            content="Computing, Tech, Dev, Development,  Webdev, Software, Coding, Blog, Community, HTML, CSS, JavaScript">
+        <meta name="author" content="Donnchadh Mc Ginley">
+        <meta name="theme-color" content="#3d4545">
+
+
         {% if title %}
         <title>Tech Blog Home - {{ title }}</title>
         {% else %}
@@ -26,9 +32,7 @@
             href="{% static 'techblog_app/images/favicon/favicon-32x32.png' %}">
         <link rel="icon" type="image/png" sizes="16x16"
             href="{% static 'techblog_app/images/favicon/favicon-16x16.png' %}">
-
         {% include 'django_quill/media.html' %}
-
     </head>
 
     <body class="flex-100 d-flex flex-column h-100">
