fix: padding on h1 in post detail and profile page

--- a/techblog_app/templates/techblog_app/user_posts.html
+++ b/techblog_app/templates/techblog_app/user_posts.html
@@ -76,7 +76,7 @@
 
             {# the main body of text #}
             <article class="p-3 pt-0 pt-sm-3 d-block overflow-hidden">
-                <h2>
+                <h2 class="pt-sm-3">
                     <a class="post-title-color" href="{% url 'post-detail' post.id %}">
                         {{ post.title }}
                     </a>
