--- a/techblog_app/templates/techblog_app/post_detail.html
+++ b/techblog_app/templates/techblog_app/post_detail.html
@@ -36,7 +36,7 @@
 
         {# the main body of text #}
         <article class="p-3 pt-0 pt-sm-3 d-block overflow-hidden">
-            <h2>
+            <h2 class="pt-sm-3">
                 {{ object.title }}
             </h2>
             <p>
