--- a/techblog_app/templates/techblog_app/post_detail.html
+++ b/techblog_app/templates/techblog_app/post_detail.html
@@ -118,8 +118,8 @@
                     alt="profile image of the commenter">
             </a>
             <article class="pt-0 pt-sm-3 d-block overflow-hidden">
-                <div class="d-flex align-items-center justify-content-between py-1">
-                    <h3 class="text-black">{{ comment.title }}</h3>
+                <div class="d-flex align-items-center justify-content-between pt-1">
+                    <h3 class="text-black mb-0">{{ comment.title }}</h3>
                 </div>
                 <div class="pb-4">
                     <p class="">
