fix: width of image in post to 100 precinct

--- a/techblog_app/static/techblog_app/css/custom-text-editor.css
+++ b/techblog_app/static/techblog_app/css/custom-text-editor.css
@@ -67,7 +67,8 @@ blockquote {
 .ql-editor img,
 article img {
     border-radius: 3px;
-    width: clamp(100px, 100%, 700px);
+    /* width: clamp(100px, 100%, 700px); */
+    width: 100%;
 }
 
 
