maint: remove old pip packages

--- a/techblog_app/templates/techblog_app/post_quill_editor_script.html
+++ b/techblog_app/templates/techblog_app/post_quill_editor_script.html
@@ -1,5 +1,4 @@
 <script>
-    // https://github.com/sparksuite/simplemde-markdown-editor
 
     var contentTextArea = document.getElementById("editor");
     var toolbarOptions = [
@@ -12,6 +11,7 @@
 
     var quill = new Quill('#editor', {
         modules: {
+            syntax: true,              // Include syntax module
             toolbar: toolbarOptions
         },
         theme: 'snow'
@@ -19,10 +19,5 @@
     // ensure the JavaScript editor updates to the crispy forms textarea
     markdownEditor.codemirror.on("change", function () {
         contentTextArea.value = markdownEditor.value();
-
-
     });
-
-
-
 </script>
