fix: use cdn for quill text highlighting to work

--- a/techblog_app/templates/techblog_app/base.html
+++ b/techblog_app/templates/techblog_app/base.html
@@ -33,6 +33,11 @@
         <link rel="stylesheet" type="text/css" href="{% static 'techblog_app/css/custom-text-editor.css' %}" />
         <script src="{% static 'techblog_app/js/dist/main.js' %}"></script>
 
+
+        <!-- Include stylesheet -->
+        <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+        <!-- Include the Quill library -->
+        <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     </head>
 
     <body class="flex-100 d-flex flex-column h-100">
