--- a/techblog_app/static/techblog_app/css/custom-text-editor.css
+++ b/techblog_app/static/techblog_app/css/custom-text-editor.css
@@ -41,7 +41,7 @@ p img {
 
 /* quill pre element */
 pre {
-    color: var(--light-gray);
+    /* color: var(--light-gray); */
     border-radius: 3px;
     background-color: #353535;
     padding: .8rem;
