--- a/users_app/templates/users_app/edit_profile.html
+++ b/users_app/templates/users_app/edit_profile.html
@@ -4,7 +4,7 @@
 <div class="px-3" style="min-height: 540px;">
     <main class="container form-container col-md-8 col-lg-6">
         <section class="p-3">
-            <img class="rounded-circle m-4 mx-auto d-block" height="200" src="{{ user.profile.image.url }}"
+            <img class="avatar-img-profile rounded-circle m-4 mx-auto d-block" src="{{ user.profile.image.url }}"
                 alt="users image" srcset="">
             <h1 class="text-capitalize text-center mb-2">
                 {{ user.username  }}
