--- a/techblog_app/templates/techblog_app/index.html
+++ b/techblog_app/templates/techblog_app/index.html
@@ -6,7 +6,7 @@
     {% for post in posts %}
     <div class="d-flex flex-column flex-sm-row rounded border bg-light my-4">
         <a class="d-inline align-self-start rounded-circle m-2" href="{% url 'user-posts' post.author.username %}">
-            <img src="{{ post.author.profile.image.url }}" class="rounded-circle m-2" height="74"
+            <img src="{{ post.author.profile.image.url }}" class="avatar-img-post rounded-circle m-2" height="74"
                 alt="post profile image of the author" title="profile image">
         </a>
 
