--- a/techblog_app/templates/techblog_app/user_posts.html
+++ b/techblog_app/templates/techblog_app/user_posts.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class=p-3">
         <div class="d-flex align-items-center position-relative justify-content-center profile-pic-container">
-            <img src="{{ user.profile.image.url }}" class="rounded-circle m-5 d-block" height="200" alt="">
+            <img src="{{ user.profile.image.url }}" class="avatar-img-profile rounded-circle m-5 d-block" alt="">
         </div>
 
         <div class="text-center">
@@ -71,7 +71,7 @@
                     </li>
             </div>
             {% endif %}
-            <img src="{{ post.author.profile.image.url }}" class="rounded-circle m-3" height="74"
+            <img src="{{ post.author.profile.image.url }}" class="avatar-img-post rounded-circle m-3"
                 alt="post profile image of the author">
 
             {# the main body of text #}
