--- a/techblog_app/static/techblog_app/css/custom-text-editor.css
+++ b/techblog_app/static/techblog_app/css/custom-text-editor.css
@@ -119,7 +119,7 @@ article img {
 }
 
 
-@media screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
 
     .avatar-img-profile {
         object-fit: cover;
