--- a/techblog_app/templates/techblog_app/about.html
+++ b/techblog_app/templates/techblog_app/about.html
@@ -6,9 +6,9 @@
 <section class="container my-5">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-2 border shadow">
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-4 pb-4">Tech<span class="fw-bold">Blog</span> <strong class="text-dark">Border hero
-                    with cropped image and
-                    shadows</strong>
+            <h1 class="display-4 pb-4">Tech<span class="fw-bold">Blog</span><strong class="text-dark"> - discuss
+                    everything to do with Webdev, Code & Programing
+                </strong>
             </h1>
             <p class="lead pb-3">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s
                 most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
@@ -88,14 +88,14 @@
     <div class="row">
         <div class="d-flex justify-content-center col-lg-5">
             <div class="pt-lg-5 pb-3 col-10 col-lg-12">
-                <h2>Title of section</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio quam cumque atque expedita!
-                    Consequuntur
-                    velit
-                    incidunt eligendi ab deleniti accusamus, temporibus maiores veniam!</p>
+                <h2>Quill editor</h2>
+                <p>Quilljs editor uses <a href="https://highlightjs.org/" target="_blank">highlight.js</a> for its
+                    syntax highlighting.
+                    I used several components in the toolbar to allow for a user friendly experience, without being
+                    overwhelmed with too much functionality.</p>
             </div>
         </div>
-        <div class="col-lg-7">
+        <div class=" col-lg-7">
             <img class="img-fluid" src="{% static 'techblog_app/images/md_post.png' %}" alt="">
         </div>
     </div>
