--- a/techblog_app/templates/techblog_app/about_quill_form.html
+++ b/techblog_app/templates/techblog_app/about_quill_form.html
@@ -1,5 +1,7 @@
 <!-- Create the editor container -->
 <div id="editor">
+    <h3><span style="color: #909090;">...You can test it out here</span></h3>
+    <p><br></p>
     <h2><span style="color: rgb(153, 51, 255);">Hello World!</span></h2>
     <p>Some initial <strong>bold</strong> text</p>
     <p><br></p>
