--- a/techblog_app/templates/techblog_app/user_posts.html
+++ b/techblog_app/templates/techblog_app/user_posts.html
@@ -3,7 +3,8 @@
 <div class="container">
     <div class=p-3">
         <div class="d-flex align-items-center position-relative justify-content-center profile-pic-container">
-            <img src="{{ user.profile.image.url }}" class="avatar-img-profile rounded-circle m-5 d-block" alt="">
+            <img src="{{ user.profile.image.url }}" class="avatar-img-profile rounded-circle m-5 d-block"
+                alt="profile image">
         </div>
 
         <div class="text-center">
@@ -72,7 +73,7 @@
             </div>
             {% endif %}
             <img src="{{ post.author.profile.image.url }}" class="avatar-img-post rounded-circle m-3"
-                alt="post profile image of the author">
+                alt="profile image of the author">
 
             {# the main body of text #}
             <article class="p-3 pt-0 pt-sm-3 d-block overflow-hidden">
