fix quill remove justify  add bullet

--- a/techblog_app/templates/techblog_app/about_quill_form.html
+++ b/techblog_app/templates/techblog_app/about_quill_form.html
@@ -9,8 +9,8 @@
 
 <script>
     var toolbarOptions = [
-        [{ 'header': [] }, 'bold', 'italic', 'underline', 'strike', 'blockquote', 'code-block',
-        { 'align': [] },
+        [{ 'header': [] }, 'bold', 'italic', 'underline', 'strike', { 'list': 'ordered' }, { 'list': 'bullet' },
+            'blockquote', 'code-block',
         { 'color': [] },
         { 'background': [] }],
         ['image', 'link'],
