--- a/techblog_app/static/techblog_app/css/custom-text-editor.css
+++ b/techblog_app/static/techblog_app/css/custom-text-editor.css
@@ -1,6 +1,8 @@
 :root {
+    --primary: #583ccc;
     --black: #212529;
     --light-gray: #f9fafb;
+    --link: #a10a41;
 }
 
 /* -------------------------- */
@@ -92,6 +94,14 @@ article img {
     max-width: 100%;
     margin: .2rem;
 }
+
+ql-editor a,
+article a {
+    color: var(--link) !important;
+}
+
+
+
 
 /* -------------------------- */
 /* work-around to fix the z-index  ...of success message going under the profile image in the profile page*/
