--- a/frontend-bootstrap/src/sass/index.scss
+++ b/frontend-bootstrap/src/sass/index.scss
@@ -29,6 +29,8 @@ $btn-border-radius-lg: 0.4rem;
     --link: #a10a41;
     --link-hover: #711939;
     --name: #b7b9bb;
+    --article-link: #4a27ca;
+    --article-link-hover: rgb(70, 46, 167);
 }
 
 h1,
@@ -92,4 +94,13 @@ a:hover {
 
 footer .name-color {
     color: var(--name);
+}
+
+ql-editor a,
+article a {
+    color: var(--article-link) !important;
+}
+ql-editor a:hover,
+article a:hover {
+    color: var(--article-link-hover) !important;
 }
