--- a/techblog_app/templates/techblog_app/user_posts_update.html
+++ b/techblog_app/templates/techblog_app/user_posts_update.html
@@ -1,7 +1,7 @@
 {% extends 'techblog_app/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<section class="py-5 px-3" style="min-height: 560px;">
+<section class="post-form-h py-5 px-3">
     <div class="container form-container col-md-10 col-lg-8">
         <form action="" method="POST">
             {% csrf_token %}
