--- a/users_app/templates/users_app/edit_profile.html
+++ b/users_app/templates/users_app/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends 'techblog_app/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="px-3" style="min-height: 540px;">
+<div class="edit-profile-form-h px-3">
     <main class="container form-container col-md-8 col-lg-6">
         <section class="p-3">
             <img class="avatar-img-profile rounded-circle m-4 mx-auto d-block" src="{{ user.profile.image.url }}"
