--- a/techblog_app/templates/techblog_app/user_comments_update.html
+++ b/techblog_app/templates/techblog_app/user_comments_update.html
@@ -1,7 +1,7 @@
 {% extends 'techblog_app/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="py-5 px-3" style="min-height: 560px;">
+<div class="comment-form-h py-5 px-3">
     <div class="form-container container col-md-10 col-lg-8">
         <form action="" method="POST">
             {% csrf_token %}
