--- a/users_app/templates/users_app/login.html
+++ b/users_app/templates/users_app/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="flex-container px-3 gray-bg" style="min-height: 520px;">
+<div class="flex-container login-form-h px-3 gray-bg">
     <main class="container form-container form-max-width col-md-6 col-lg-4">
         <h3 class="mb-4 d-flex align-items-center" href="">
             <img class="me-2" height="48" src="{% static 'techblog_app/images/logo_dark.svg' %}" alt="image of logo">
