--- a/users_app/templates/users_app/register.html
+++ b/users_app/templates/users_app/register.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="flex-container gray-bg px-3 py-5 pb-3" style="min-height: 860px;">
+<div class="flex-container register-form-h gray-bg px-3 py-3 pb-3">
     <main class="container form-container form-max-width col-md-6 col-lg-4">
         <h3 class="mb-4 d-flex align-items-center" href="">
             <img class="me-2" height="48" src="{% static 'techblog_app/images/logo_dark.svg' %}" alt="image of logo">
