--- a/techblog_app/templates/techblog_app/footer.html
+++ b/techblog_app/templates/techblog_app/footer.html
@@ -1,12 +1,14 @@
-<footer class="bg-secondary footer mt-auto">
-    <div class="container py-3">
-        <div class="d-sm-flex justify-content-between align-items-center">
-            <p class="mb-0 name-color">© 2022 Donnchadh Mc Ginley</p>
-            <ul class="d-flex justify-content-end nav">
-                <li class="nav-item"><a href="{% url 'techblog-home' %}" class="nav-link px-2 text-light">Home</a></li>
+<footer class="footer bg-secondary mt-auto">
+    <div class="footer container">
+        <div class="footer-content d-sm-flex flex-row-reverse justify-content-between align-items-center">
+
+            <ul class="d-flex justify-content-end nav pt-4 pt-sm-0">
+                <li class="nav-item"><a href="{% url 'techblog-home' %}" class="nav-link px-2 text-light">Home</a>
+                </li>
                 <li class="nav-item"><a href="{% url 'techblog-about' %}" class="nav-link px-2 text-light">About</a>
                 </li>
             </ul>
+            <p class="name-color text-center">© 2022 Donnchadh Mc Ginley</p>
         </div>
     </div>
 </footer>
