--- a/techblog_app/templates/techblog_app/index.html
+++ b/techblog_app/templates/techblog_app/index.html
@@ -2,7 +2,7 @@
 {% load tz %}
 {% block content %}
 {# post section #}
-<div class="container mt-5">
+<div class="container pt-5">
     {% for post in posts %}
     <div class="d-flex flex-column flex-sm-row rounded border bg-light my-4">
         <a class="d-inline align-self-start rounded-circle m-2" href="{% url 'user-posts' post.author.username %}">
@@ -47,7 +47,7 @@
     </div>
     {% endfor %}
 </div>
-<div class="d-flex justify-content-center my-4">
+<div class="d-flex justify-content-center my-5">
     {% if is_paginated %}
     {% if page_obj.has_previous %}
     <a class="pagination-btn btn btn-outline-secondary m-1" href="?page=1">First</a>
