--- a/techblog_app/templates/techblog_app/user_posts.html
+++ b/techblog_app/templates/techblog_app/user_posts.html
@@ -1,7 +1,7 @@
 {% extends 'techblog_app/base.html' %}
 {% block content %}
 <div class="container">
-    <div class=p-3">
+    <div class="">
         <div class="d-flex align-items-center position-relative justify-content-center profile-pic-container">
             <img src="{{ user.profile.image.url }}" class="avatar-img-profile rounded-circle m-5 d-block"
                 alt="profile image">
