--- a/techblog_app/templates/techblog_app/post_form.html
+++ b/techblog_app/templates/techblog_app/post_form.html
@@ -9,7 +9,7 @@
                 <legend class="pb-3 text-capitalize">create blog post</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div class="d-flex">
+            <div class="d-flex mt-3">
                 <button class="btn btn-primary d-block text mb-4 col-12 col-md-6 col-lg-4" type="submit">Post</button>
             </div>
         </form>
