--- a/techblog_app/templates/techblog_app/user_posts_update.html
+++ b/techblog_app/templates/techblog_app/user_posts_update.html
@@ -9,7 +9,7 @@
                 <legend class="pb-3 text-capitalize">Update Blog Post</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div class="d-grid">
+            <div class="d-grid mt-3">
                 <button class="btn btn-primary d-block text mb-4 col-12 col-md-6 col-lg-4" type="submit">Update</button>
             </div>
         </form>
