docs: more user stories as registered user admin

--- a/techblog_app/templates/techblog_app/base.html
+++ b/techblog_app/templates/techblog_app/base.html
@@ -69,7 +69,7 @@
                         <div class=" collapse navbar-collapse" id="navbarNavDropdown">
                             <div class="dropdown">
                                 <a class="data-toggle" href="#" role="button" id="dropdownMenuLink"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    data-bs-toggle="dropdown" aria-expanded="false" aria-label="dropdown menu">
                                     {%  if user.is_authenticated %}
                                     {% comment %}
                                     {% endcomment %}
