fix: darker muted text  for accessibility

--- a/techblog_app/static/techblog_app/css/custom-text-editor.css
+++ b/techblog_app/static/techblog_app/css/custom-text-editor.css
@@ -52,7 +52,10 @@ article .post-link-color:hover {
     color: var(--link-hover);
 }
 
-
+/* for muted text */
+.text-soften {
+    color: #495f72;
+}
 
 /* -------------------------- */
 /* quill editor css setting */
