--- a/techblog_app/templates/techblog_app/error400.html
+++ b/techblog_app/templates/techblog_app/error400.html
@@ -14,7 +14,7 @@
     </h2>
     <h3>400</h3>
     <p>Bad request</p>
-    <p class="text-muted fst-italic">400 bad request error is an HTTP status code that describes an error caused by an
+    <p class="text-soften fst-italic">400 bad request error is an HTTP status code that describes an error caused by an
         invalid request.</p>
 </div>
 <!-- </div> -->
