--- a/techblog_app/templates/techblog_app/error403.html
+++ b/techblog_app/templates/techblog_app/error403.html
@@ -14,7 +14,7 @@
     </h2>
     <h3>403</h3>
     <p>Access denied</p>
-    <p class="text-muted fst-italic">403 Forbidden response status code indicates that the server understands
+    <p class="text-soften fst-italic">403 Forbidden response status code indicates that the server understands
         the
         request but refuses to authorize it.</p>
 </div>
