--- a/techblog_app/templates/techblog_app/error404.html
+++ b/techblog_app/templates/techblog_app/error404.html
@@ -14,7 +14,7 @@
     </h2>
     <h3>404</h3>
     <p>Not found... keep looking</p>
-    <p class="text-muted fst-italic">the requested page is unavailable</p>
+    <p class="text-soften fst-italic">the requested page is unavailable</p>
 
 </div>
 <!-- </div> -->
