--- a/techblog_app/templates/techblog_app/error500.html
+++ b/techblog_app/templates/techblog_app/error500.html
@@ -14,7 +14,7 @@
     </h2>
     <h3>500</h3>
     <p>System error...</p>
-    <p class="text-muted fst-italic">web server is experiencing problems, but it can't pinpoint the specific error
+    <p class="text-soften fst-italic">web server is experiencing problems, but it can't pinpoint the specific error
         or its root causes.</p>
 
 </div>
