--- a/users_app/templates/users_app/register.html
+++ b/users_app/templates/users_app/register.html
@@ -19,7 +19,7 @@
             </div>
         </form>
         <div class="border-top mt-2 pt-2">
-            <small class="text-muted">Already have an account?
+            <small class="text-soften">Already have an account?
                 <a class="ml-2 fw-semibold" href="{% url 'login' %}">Sign in</a>
             </small>
         </div>
