--- a/techblog_app/templates/techblog_app/user_posts.html
+++ b/techblog_app/templates/techblog_app/user_posts.html
@@ -85,7 +85,7 @@
                 <p>
                     {{ post.content.html|safe }}
                 </p>
-                <small class="text-muted">
+                <small class="text-soften">
                     By
                     <span class="fw-bold text-dark" href="{% url 'user-posts' post.author.username %}">
                         {{ post.author }}</span>
