--- a/users_app/templates/users_app/login.html
+++ b/users_app/templates/users_app/login.html
@@ -19,7 +19,7 @@
             </div>
         </form>
         <div class="border-top mt-2 pt-2">
-            <small class="text-muted">Need an account?
+            <small class="text-soften">Need an account?
                 <a class="ml-2 fw-semibold" href="{% url 'register' %}">Register</a>
             </small>
         </div>
