--- a/techblog_app/templates/techblog_app/base.html
+++ b/techblog_app/templates/techblog_app/base.html
@@ -231,8 +231,8 @@
                         <h4 class="offcanvas-title fw-bold ps-3" id="offcanvasNavbarLabel">Not logged in</h4>
                     </div>
                     {% endif %}
-                    <button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
+                    <button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas" aria-label="Close"
+                        title="Hamburger Menu"></button>
                 </div>
                 <div class="offcanvas-body">
                     <ul class="text-dark flex-grow-1 justify-content-end navbar-nav pe-3 text-capitalize">
