--- a/techblog_app/templates/techblog_app/post_detail.html
+++ b/techblog_app/templates/techblog_app/post_detail.html
@@ -81,7 +81,7 @@
 
 
 {# the comment section #}
-<section class="container">
+<section class="container pb-3">
     {% if not post.comments.all %}
     <div class="post-container p-2">
         <p class="text-soften mt-4 ps-5">No comments yet...</p>
@@ -144,22 +144,4 @@
     {% endif %}
 </section>
 
-
-<!-- <div class="d-flex justify-content-center my-4">
-    {% if is_paginated %}
-    {% if page_obj.has_previous %}
-    <a class="pagination-btn btn btn-outline-secondary m-1" href="?page=1">First</a>
-    {% endif %}
-    {% for num in page_obj.paginator.page_range %}
-    {% if page_obj.number == num %}
-    <a class="pagination-btn btn btn-secondary m-1" href="?page={{ num }}">{{ num }}</a>
-    {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-    <a class="pagination-btn btn btn-outline-secondary m-1" href="?page={{ num }}">{{ num }}</a>
-    {% endif %}
-    {% endfor %}
-    {% if page_obj.has_next %}
-    <a class="pagination-btn btn btn-outline-secondary m-1" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-    {% endif %}
-    {% endif %}
-</div> -->
 {% endblock content %}
