fix: footer text placement and size smaller

--- a/techblog_app/static/techblog_app/css/custom-text-editor.css
+++ b/techblog_app/static/techblog_app/css/custom-text-editor.css
@@ -110,8 +110,6 @@ span.hljs-comment {
     color: #5595CE !important;
 }
 
-.ql-syntax {}
-
 code {
     color: var(--primary);
     background-color: #f0f0f0;
@@ -188,6 +186,7 @@ article img {
 
 footer .name-color {
     color: var(--name);
+    font-size: .9rem;
 }
 
 footer p {
