--- a/techblog_app/templates/techblog_app/footer.html
+++ b/techblog_app/templates/techblog_app/footer.html
@@ -2,7 +2,7 @@
     <div class="footer container">
         <div class="footer-content d-sm-flex flex-row-reverse justify-content-between align-items-center">
 
-            <ul class="d-flex justify-content-end nav pt-4 pt-sm-0">
+            <ul class="d-flex justify-content-center justify-content-sm-end nav pt-4 pt-sm-0">
                 <li class="nav-item"><a href="{% url 'techblog-home' %}" class="nav-link px-2 text-light">Home</a>
                 </li>
                 <li class="nav-item"><a href="{% url 'techblog-about' %}" class="nav-link px-2 text-light">About</a>
