docs: add SEO image

--- a/techblog_app/templates/techblog_app/about.html
+++ b/techblog_app/templates/techblog_app/about.html
@@ -91,7 +91,8 @@
         <div class="d-flex justify-content-center col-lg-5">
             <div class="pt-lg-5 pb-3 col-10 col-lg-12">
                 <h2>Quill editor</h2>
-                <p>Quilljs editor uses <a href="https://highlightjs.org/" target="_blank">highlight.js</a> for its
+                <p>Quilljs editor uses <a href="https://highlightjs.org/" target="_blank"
+                        rel="noopener">highlight.js</a> for its
                     syntax highlighting.
                     I used several components in the toolbar to allow for a user friendly experience, without being
                     overwhelmed with too much functionality.</p>
@@ -105,8 +106,8 @@
 </section>
 <section class="container pt-3 pb-2">
     <div class="px-2 px-sm-3">
-        <h2 class="mt-5 pb-3">Rich text editor used - <strong><a href="https://quilljs.com/"
-                    target="_blank">Quill</a></strong></h2>
+        <h2 class="mt-5 pb-3">Rich text editor used - <strong><a href="https://quilljs.com/" target="_blank"
+                    rel="noopener">Quill</a></strong></h2>
         <section class="pb-5">
             {% include 'techblog_app/about_quill_form.html' %}
         </section>
