--- a/techblog_app/templates/techblog_app/about.html
+++ b/techblog_app/templates/techblog_app/about.html
@@ -10,9 +10,17 @@
                     everything to do with Webdev, Code & Programing
                 </strong>
             </h1>
-            <p class="lead pb-3">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s
-                most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
-                system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+            <p class="lead pb-3">A friendly place to discuss ideas, designed with mobile-first using the latest
+                Bootstrap5, the world’s
+                most popular front-end open source toolkit. A responsive site from mobile to large screens, writer in
+                <strong class="fw-bold">Django</strong>,
+                <strong class="fw-bold">Python</strong> (of course),
+                <strong class="fw-bold">JavaScript</strong>, and with the
+                <strong class="fw-bold">SCSS</strong> compiled using
+                <strong class="fw-bold">Webpack</strong>.
+            </p>
+
+
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
 
                 <div>
@@ -33,7 +41,7 @@
             </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden">
-            <img class="rounded-lg-3" src="{% static 'techblog_app/images/hero_image4.png' %}"
+            <img class="rounded-lg-3" src="{% static 'techblog_app/images/hero_img.png' %}"
                 alt="image of the front page of the blog" width="720">
         </div>
     </div>
