--- a/techblog_app/static/techblog_app/css/custom-text-editor.css
+++ b/techblog_app/static/techblog_app/css/custom-text-editor.css
@@ -54,7 +54,7 @@ article .post-link-color:hover {
 
 /* for muted text */
 .text-soften {
-    color: #495f72;
+    color: #495f72 !important;
 }
 
 /* -------------------------- */
